@@ -1,6 +1,7 @@
 UNRELEASED
 
 - Wait for thread termination in axel.c:axel_do (Closes: #311255), thanks John Ripa
+- New Chinese translation and manpage, thanks Shuge Lee
 - Fix LFS support for FTP (Closes: #311320)
 - Fix LFS support (Closes: #311324)
 
